// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login Endpoint Should include other required parameters 1`] = `
Object {
  "client_id": "123456",
}
`;

exports[`Redirect URI Handler Should able to override the profile params 1`] = `
Object {
  "email": "Josianne_Bosco@gmail.com",
  "firstName": "Manuel",
  "id": "123456",
  "lastName": "",
  "name": "Manuel",
  "profilePicture": "http://lorempixel.com/640/480",
  "provider": "GitHub",
  "raw": Object {
    "avatar_url": "http://lorempixel.com/640/480",
    "email": "Josianne_Bosco@gmail.com",
    "id": 123456,
    "name": "Manuel",
  },
}
`;

exports[`Redirect URI Handler Should able to override the profile params 2`] = `
Array [
  "https://api.github.com/user",
  Object {
    "headers": Object {
      "Authorization": "Bearer 87b23deb-3fde-4de5-b726-c1a4bb2747ff",
    },
    "params": Object {
      "fields": "id",
    },
  },
]
`;

exports[`Redirect URI Handler Should handle redirection properly 1`] = `
Object {
  "email": "Josianne_Bosco@gmail.com",
  "firstName": "Manuel",
  "id": "123456",
  "lastName": "",
  "name": "Manuel",
  "profilePicture": "http://lorempixel.com/640/480",
  "provider": "GitHub",
  "raw": Object {
    "avatar_url": "http://lorempixel.com/640/480",
    "email": "Josianne_Bosco@gmail.com",
    "id": 123456,
    "name": "Manuel",
  },
}
`;

exports[`Redirect URI Handler Should handle redirection properly 2`] = `
Array [
  "https://github.com/login/oauth/access_token",
  Object {
    "client_id": "123456",
    "client_secret": "super-secret",
    "code": "lorem",
    "redirect_uri": "http://127.0.0.1/auth/github/callback",
  },
  Object {
    "headers": Object {
      "Accept": "application/json",
    },
  },
]
`;

exports[`Redirect URI Handler Should handle redirection properly 3`] = `
Array [
  "https://api.github.com/user",
  Object {
    "headers": Object {
      "Authorization": "Bearer 87b23deb-3fde-4de5-b726-c1a4bb2747ff",
    },
    "params": Object {},
  },
]
`;
